- Worked on multithreading

--- a/Source/Mosa.Tool.GDBDebugger/packages.config
+++ b/Source/Mosa.Tool.GDBDebugger/packages.config
@@ -13,7 +13,7 @@
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="net461" />
+  <package id="System.Reflection.TypeExtensions" version="4.5.0-preview1-26216-02" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
