--- a/Source/Mosa.VisualStudio.Template/MOSA Project/Mosa.Starter.x86.csproj
+++ b/Source/Mosa.VisualStudio.Template/MOSA Project/Mosa.Starter.x86.csproj
@@ -93,7 +93,7 @@
 	<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<StartAction>Program</StartAction>
-		<StartProgram>$(ProjectDir)\..\bin\Mosa.Tool.Launcher.exe</StartProgram>
-		<StartArguments>--q --a --qemu Mosa.Starter.x86.exe</StartArguments>
+		<StartProgram>$(ProjectDir)\..\tools\Mosa.Tool.Launcher.exe</StartProgram>
+		<StartArguments>--q --a Mosa.Starter.x86.exe</StartArguments>
 	</PropertyGroup>
 </Project>
