--- a/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj
+++ b/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj
@@ -71,7 +71,7 @@
     <Compile Include="IOPort.cs" />
     <Compile Include="LZF.cs" />
     <Compile Include="Thread.cs" />
-    <Compile Include="ThreadScheduler.cs" />
+    <Compile Include="Scheduler.cs" />
     <Compile Include="UnitTestQueue.cs" />
     <Compile Include="UnitTestRunner.cs" />
     <Compile Include="Helpers\Assert.cs" />
