- Worked on debugger

--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -84,69 +84,69 @@
     <Compile Include="DebugData\MethodInfo.cs" />
     <Compile Include="DebugData\FieldInfo.cs" />
     <Compile Include="DebugData\TypeInfo.cs" />
-    <Compile Include="DebugQemuWindow.cs">
+    <Compile Include="DebugAppLocationsWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DebugQemuWindow.Designer.cs">
-      <DependentUpon>DebugQemuWindow.cs</DependentUpon>
+    <Compile Include="DebugAppLocationsWindow.Designer.cs">
+      <DependentUpon>DebugAppLocationsWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="GDB\MemoryCache.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="View\BreakPointView.cs">
+    <Compile Include="Views\BreakPointView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\BreakPointView.designer.cs">
+    <Compile Include="Views\BreakPointView.designer.cs">
       <DependentUpon>BreakPointView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\CallStackView.cs">
+    <Compile Include="Views\CallStackView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\CallStackView.designer.cs">
+    <Compile Include="Views\CallStackView.designer.cs">
       <DependentUpon>CallStackView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\DisplayView.cs">
+    <Compile Include="Views\DisplayView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\DisplayView.designer.cs">
+    <Compile Include="Views\DisplayView.designer.cs">
       <DependentUpon>DisplayView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\MethodView.cs">
+    <Compile Include="Views\MethodView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\MethodView.designer.cs">
+    <Compile Include="Views\MethodView.designer.cs">
       <DependentUpon>MethodView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\InstructionView.cs">
+    <Compile Include="Views\InstructionView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\InstructionView.designer.cs">
+    <Compile Include="Views\InstructionView.designer.cs">
       <DependentUpon>InstructionView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\StackFrameView.cs">
+    <Compile Include="Views\StackFrameView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\StackFrameView.designer.cs">
+    <Compile Include="Views\StackFrameView.designer.cs">
       <DependentUpon>StackFrameView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\SymbolView.cs">
+    <Compile Include="Views\SymbolView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\SymbolView.designer.cs">
+    <Compile Include="Views\SymbolView.designer.cs">
       <DependentUpon>SymbolView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\WatchView.cs">
+    <Compile Include="Views\WatchView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\WatchView.designer.cs">
+    <Compile Include="Views\WatchView.designer.cs">
       <DependentUpon>WatchView.cs</DependentUpon>
     </Compile>
     <Compile Include="AddBreakPointArgs.cs" />
     <Compile Include="Watch.cs" />
     <Compile Include="Breakpoint.cs" />
-    <Compile Include="View\ControlView.cs">
+    <Compile Include="Views\ControlView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\ControlView.designer.cs">
+    <Compile Include="Views\ControlView.designer.cs">
       <DependentUpon>ControlView.cs</DependentUpon>
     </Compile>
     <Compile Include="DebugData\LoadDebugData.cs" />
@@ -166,16 +166,16 @@
     <Compile Include="MainForm.designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\MemoryView.cs">
+    <Compile Include="Views\MemoryView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\MemoryView.designer.cs">
+    <Compile Include="Views\MemoryView.designer.cs">
       <DependentUpon>MemoryView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\OutputView.cs">
+    <Compile Include="Views\OutputView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\OutputView.designer.cs">
+    <Compile Include="Views\OutputView.designer.cs">
       <DependentUpon>OutputView.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -191,16 +191,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="View\RegisterView.cs">
+    <Compile Include="Views\RegisterView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\RegisterView.designer.cs">
+    <Compile Include="Views\RegisterView.designer.cs">
       <DependentUpon>RegisterView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\StatusView.cs">
+    <Compile Include="Views\StatusView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\StatusView.designer.cs">
+    <Compile Include="Views\StatusView.designer.cs">
       <DependentUpon>StatusView.cs</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -237,16 +237,16 @@
     <EmbeddedResource Include="ConnectWindow.resx">
       <DependentUpon>ConnectWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DebugQemuWindow.resx">
-      <DependentUpon>DebugQemuWindow.cs</DependentUpon>
+    <EmbeddedResource Include="DebugAppLocationsWindow.resx">
+      <DependentUpon>DebugAppLocationsWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\BreakPointView.resx">
+    <EmbeddedResource Include="Views\BreakPointView.resx">
       <DependentUpon>BreakPointView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\CallStackView.resx">
+    <EmbeddedResource Include="Views\CallStackView.resx">
       <DependentUpon>CallStackView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\ControlView.resx">
+    <EmbeddedResource Include="Views\ControlView.resx">
       <DependentUpon>ControlView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
@@ -255,38 +255,38 @@
     <EmbeddedResource Include="DebugDockContent.resx">
       <DependentUpon>DebugDockContent.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\DisplayView.resx">
+    <EmbeddedResource Include="Views\DisplayView.resx">
       <DependentUpon>DisplayView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\MethodView.resx">
+    <EmbeddedResource Include="Views\MethodView.resx">
       <DependentUpon>MethodView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\MemoryView.resx">
+    <EmbeddedResource Include="Views\MemoryView.resx">
       <DependentUpon>MemoryView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\OutputView.resx">
+    <EmbeddedResource Include="Views\OutputView.resx">
       <DependentUpon>OutputView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\RegisterView.resx">
+    <EmbeddedResource Include="Views\RegisterView.resx">
       <DependentUpon>RegisterView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\InstructionView.resx">
+    <EmbeddedResource Include="Views\InstructionView.resx">
       <DependentUpon>InstructionView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\StackFrameView.resx">
+    <EmbeddedResource Include="Views\StackFrameView.resx">
       <DependentUpon>StackFrameView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\StatusView.resx">
+    <EmbeddedResource Include="Views\StatusView.resx">
       <DependentUpon>StatusView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\SymbolView.resx">
+    <EmbeddedResource Include="Views\SymbolView.resx">
       <DependentUpon>SymbolView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\WatchView.resx">
+    <EmbeddedResource Include="Views\WatchView.resx">
       <DependentUpon>WatchView.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
