--- a/Source/Mosa.Utility.Launcher/Mosa.Utility.Launcher.csproj
+++ b/Source/Mosa.Utility.Launcher/Mosa.Utility.Launcher.csproj
@@ -94,7 +94,7 @@
     <Compile Include="BuilderEventListener.cs" />
     <Compile Include="CheckOptions.cs" />
     <Compile Include="IBuilderEvent.cs" />
-    <Compile Include="DebugConnectionOption.cs" />
+    <Compile Include="SerialConnectionOption.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="PlatformType.cs" />
     <Compile Include="Builder.cs" />
