--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -198,7 +198,7 @@
     <Compile Include="Instructions\CmpConst32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="Instructions\CmpXchgLoad32.cs">
+    <Compile Include="Instructions\CmpXChgLoad32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
     <Compile Include="Instructions\Dec32.cs">
@@ -606,7 +606,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="Instructions\Xchg32.cs">
+    <Compile Include="Instructions\XAddLoad32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instructions\XChg32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instructions\XChgLoad32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
     <Compile Include="Instructions\Xor32.cs">
@@ -615,6 +621,8 @@
     <Compile Include="Instructions\XorConst32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
+    <Compile Include="Intrinsic\XAddLoad32.cs" />
+    <Compile Include="Intrinsic\XChgLoad32.cs" />
     <Compile Include="Intrinsic\Div.cs" />
     <Compile Include="Intrinsic\AllocateStackSpace.cs" />
     <Compile Include="Intrinsic\FrameCallRetR8.cs" />
@@ -640,6 +648,7 @@
     <Compile Include="Intrinsic\Out16.cs" />
     <Compile Include="Intrinsic\Out32.cs" />
     <Compile Include="Intrinsic\Pause.cs" />
+    <Compile Include="Intrinsic\CmpXChgLoad32.cs" />
     <Compile Include="Intrinsic\SyncSet.cs" />
     <Compile Include="Intrinsic\Remainder.cs" />
     <Compile Include="Intrinsic\Set32.cs" />
