--- a/Source/Mosa.Utility.GUI.Common/Mosa.Utility.GUI.Common.csproj
+++ b/Source/Mosa.Utility.GUI.Common/Mosa.Utility.GUI.Common.csproj
@@ -50,8 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MethodStore.cs" />
     <Compile Include="TypeSystemTree.cs" />
+    <Compile Include="OldTypeSystemTree.cs" />
     <Compile Include="MethodData.cs" />
-    <Compile Include="ViewNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj">
