--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -731,6 +731,7 @@
     <Compile Include="CompilerStages\DebugFileGenerationStage.cs" />
     <Compile Include="Stages\DevirtualizeCallStage.cs" />
     <Compile Include="Stages\CallStage.cs" />
+    <Compile Include="Stages\BlockMergeStage.cs" />
     <Compile Include="Stages\IRLongExpansionStage.cs" />
     <Compile Include="Stages\LowerIRStage.cs" />
     <Compile Include="Analysis\LiveVariableAnalysis\LivenessAnalysis.cs" />
