--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ before_build:
 - nuget restore -Verbosity quiet Source\MOSA.sln
 
 after_build:
-- cmd: "C:\Program Files (x86)\Inno Setup 5\ISCC.exe" Mosa-Installer.iss
+#- cmd: "C:\Program Files (x86)\Inno Setup 5\ISCC.exe" Mosa-Installer.iss
 
 build_script:
 
