--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ build:
   publish_nuget: true
 
 after_build:
-#- cmd: "C:\Program Files (x86)\Inno Setup 5\ISCC.exe" Mosa-Installer.iss
+- "C:\Program Files (x86)\Inno Setup 5\ISCC.exe" Mosa-Installer.iss
 
 build_script:
 
