- Updated appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ shallow_clone: true
 
 install:
 #- cmd: choco install InnoSetup
+- cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 5
 
 before_build:
 - nuget restore -Verbosity quiet Source\MOSA.sln
@@ -18,7 +19,7 @@ build:
   publish_nuget: true
 
 after_build:
-- cmd: "C:\Program Files (x86)\Inno Setup 5\ISCC.exe" Source\Inno-Setup-Script\Mosa-Installer.iss
+- cmd: ISCC.exe Source\Inno-Setup-Script\Mosa-Installer.iss
 
 build_script:
 
