Adding Installer tool (#454)
* - Added Bootstrap Tool
- Updated Inno installer

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

* - Updated appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,30 +1,42 @@
+version: '1.8.{build}'
+
+configuration: Release
+platform: Any CPU
+image: Visual Studio 2017
+shallow_clone: true
+
+install:
+#- cmd: choco install InnoSetup
+- cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 5
+
+before_build:
+- nuget restore -Verbosity quiet Source\MOSA.sln
+
 build:
   verbosity: minimal
   parallel: true
   project: Source\MOSA.sln
   publish_nuget: true
 
-configuration: Release
-platform: Any CPU
-image: Visual Studio 2017
-
-shallow_clone: true
-
-install:
-#  - ps: (new-object Net.WebClient).DownloadString("https://raw.github.com/madskristensen/ExtensionScripts/master/AppVeyor/vsix.ps1") | iex
-
-before_build:
-  - nuget restore -Verbosity quiet Source\MOSA.sln
-#  - ps: Vsix-IncrementVsixVersion | Vsix-UpdateBuildVersion
-#  - ps: Vsix-TokenReplacement Source\Mosa.VisualStudio.Extension\source.extension.cs 'Version = "([0-9\\.]+)"' 'Version = "{version}"'
+after_build:
+- cmd: ISCC.exe Source\Inno-Setup-Script\Mosa-Installer.iss
 
 build_script:
-#  - msbuild /m /p:BuildInParallel=true /p:Configuration=Release /p:Platform="Any CPU" /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m Source\MOSA.sln
 
 after_test:
-#  - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
 
 nuget:
   project_feed: true
 
 test: off
+
+assembly_info:
+  patch: true
+  file: AssemblyInfo.*
+  assembly_version: "{version}"
+  assembly_file_version: "{version}"
+  assembly_informational_version: "{version}"
+
+artifacts:
+- path: 'bin\MOSA Installer\MOSA-Installer.exe'
+
