--- a/Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Mosa.Tools.Package</id>
-		<version>$version$</version>
+		<version>1.0.0.0</version>
 		<title>Mosa.Tools.Package</title>
 		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
